# Datastruct-module

./: README.md  main.py  pyproject.toml  requirements.txt
Datastruct/: custom_queue.py  linked_list.py  pyproject.toml  stack.py
Datastruct/datastruct/: main.py
Datastruct/tests/: test.py  test_main.py
tests/: test_custom_queue.py  test_linked_list.py  test_stack.py
