[tool.poetry]
name = "datastruct"
version = "0.1.0"
description = ""
authors = ["Matsiuk Aliaksei <murryaa@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
